--- a/public/admin-assets/css/grid.css
+++ b/public/admin-assets/css/grid.css
@@ -251,7 +251,7 @@ button {
 }
 
 .sidebar-dropdown a::before,
-button::before {
+.sidebar-dropdown button::before {
     content: '»';
     margin: .8rem;
 }
@@ -305,6 +305,10 @@ button:hover {
 
 .body-content p {
     font-size: .8rem;
+}
+
+.main-body table {
+    font-size: .75rem;
 }
 
 @media only screen and (max-width: 767.98px) {
