--- a/public/admin-assets/css/style.css
+++ b/public/admin-assets/css/style.css
@@ -38,3 +38,14 @@
     background: linear-gradient(to right, #01dbef, #01a9ac);
 }
 
+.font-size-12 {
+    font-size: 12px;
+}
+
+.max-width-16-rem {
+    max-width: 16rem;
+}
+
+.width-16-rem {
+    width: 16rem;
+}
