--- a/public/admin-assets/css/style.css
+++ b/public/admin-assets/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: IRANSans;
-    src: url('../fonts/IRANSans/IRANSansWeb_Light.woff') format('woff');
+    src: url("../fonts/IRANSans/IRANSansWeb_Light.woff") format("woff");
 }
 
 * {
@@ -8,40 +8,86 @@
     text-align: right;
     font-family: IRANSans;
 }
-
+/*
+   **********************************public styles*************************************
+  */
 .bg-gray {
-    background-color: #404E67;
+    background-color: #404e67;
     color: #dcdcdd;
 }
 
 .pointer {
     cursor: pointer;
 }
-
+/*
+   ********************************custom backgrounds**********************************
+  */
 .bg-custom-orange {
-    background: -webkit-gradient(linear, left top, right top, from(#feb898), to(#fe9365));
+    background: -webkit-gradient(
+        linear,
+        left top,
+        right top,
+        from(#feb898),
+        to(#fe9365)
+    );
     background: linear-gradient(to right, #feb898, #fe9365);
 }
 
 .bg-custom-green {
-    background: -webkit-gradient(linear, left top, right top, from(#0df3a3), to(#0ac282));
+    background: -webkit-gradient(
+        linear,
+        left top,
+        right top,
+        from(#0df3a3),
+        to(#0ac282)
+    );
     background: linear-gradient(to right, #0df3a3, #0ac282);
 }
 
 .bg-custom-pink {
-    background: -webkit-gradient(linear, left top, right top, from(#fe909e), to(#fe5d78));
+    background: -webkit-gradient(
+        linear,
+        left top,
+        right top,
+        from(#fe909e),
+        to(#fe5d78)
+    );
     background: linear-gradient(to right, #fe909e, #fe5d78);
 }
 
 .bg-custom-blue {
-    background: -webkit-gradient(linear, left top, right top, from(#01dbef), to(#01a9ac));
+    background: -webkit-gradient(
+        linear,
+        left top,
+        right top,
+        from(#01dbef),
+        to(#01a9ac)
+    );
     background: linear-gradient(to right, #01dbef, #01a9ac);
 }
-
+/*
+   ********************************custom font size**********************************
+  */
+.font-size-10 {
+    font-size: 10px;
+}
 .font-size-12 {
     font-size: 12px;
 }
+.font-size-14 {
+    font-size: 14px;
+}
 
+.font-size-16 {
+    font-size: 16px;
+}
+
+.font-size-18 {
+    font-size: 18px;
+}
+/*
+   ********************************custom width and height**********************************
+  */
 .max-width-16-rem {
     max-width: 16rem;
 }
@@ -64,4 +110,98 @@
 
 .height-140-px {
     height: 140px;
+}
+/*
+   ********************************body container**********************************
+  */
+
+.main-body-container-header h5 {
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+
+.main-body-container-header p {
+    font-size: 0.8rem;
+    color: #777;
+}
+
+/* admin posts */
+.alert_required {
+    color: #ff50a1 !important;
+}
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 20px;
+    width: 20px;
+    left: 4px;
+    bottom: 3px;
+    background-color: white;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+}
+
+input:checked + .slider {
+    background-color: #2196f3;
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196f3;
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+    margin: 4px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+
+/* sweet alert reform */
+.swal2-html-container {
+    text-align: center;
+}
+
+/* toast wrapper */
+.toast-wrapper {
+    position: fixed;
+    z-index: 9999;
+    top: 3rem;
+    left: 0;
+    width: 26rem;
+    max-width: 80%;
+    padding: 2rem;
 }
