create sweetalerts view and add in master

--- a/public/admin-assets/css/style.css
+++ b/public/admin-assets/css/style.css
@@ -126,9 +126,9 @@
 }
 
 /* admin posts */
-.alert_required {
+/* .alert_required {
     color: #ff50a1 !important;
-}
+} */
 .switch {
     position: relative;
     display: inline-block;
