--- a/public/customer-assets/css/product.css
+++ b/public/customer-assets/css/product.css
@@ -17,7 +17,7 @@
 
 }
 
-.product-gallery-thumb{
+.product-gallery-thumb {
     width: 4rem;
     height: 4rem;
     cursor: pointer;
@@ -40,8 +40,12 @@
     border-radius: 50%;
     display: inline-block;
     margin-bottom: -0.3rem;
+    border: 1px solid #b0c6c8;
 }
 
+.product-info-colors:hover {
+    border: 1px solid #7ab5bb;
+}
 
 .product-details {
 
@@ -56,12 +60,12 @@
 
 }
 
-.product-features table{
+.product-features table {
     font-size: 0.8rem;
     background-color: #ffffdf;
 }
 
-.product-features table tr td:first-of-type{
+.product-features table tr td:first-of-type {
     font-weight: bold;
     width: 15rem;
 }
@@ -77,7 +81,6 @@
     background-color: #FFFFFF;
     width: Calc(100% - 3rem);
 }
-
 
 
 /*start comment*/
@@ -133,17 +136,17 @@
     border: 1px dashed #cdcdcd;
     color: #333333;
     background-color: #efefef;
-    text-shadow: 2px 2px 8px rgba(0,0,0,0.3);
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
     transition: 0.4s;
 }
 
-.comment-add-wrapper .modal{
+.comment-add-wrapper .modal {
     z-index: 999999;
 }
 
 .comment-add-wrapper .modal-title {
     font-size: 0.9rem;
-    text-shadow: 2px 2px 8px rgba(0,0,0,0.3);
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
     color: #000000;
 }
 
